# rust-game

./: ADDITIONS  Cargo.toml  clippy.toml  controls.txt  todolist
assets/data/: countries.ron  map.ron
saves/: quicksave.ron  quicksave.ron.old
src/: app_state.rs  camera.rs  controls.txt  game_world_entity.rs  lib.rs  main.rs  map_generation.rs  old_hexagons.rs  province.rs  terrain_type.rs
src/components/: army.rs  buildings.rs  country.rs  events.rs  mod.rs  player.rs  province.rs  selection.rs
src/misc/: mod.rs
src/plugins/: army_movement.rs  army_systems.rs  army_visuals.rs  buildings_ui.rs  camera_controls.rs  country_selection_ui.rs  diplomacy.rs  diplomacy_ui.rs  end_turn_ui.rs  events_ui.rs  game_systems.rs  lighting.rs  main_menu_ui.rs  map_generation.rs  map_generation.rs.old  mod.rs  player_country_ui.rs  province_info_ui.rs  province_visuals.rs  save_load.rs  selection.rs  setup_egui_camera.rs  terrain_visual_3d.rs  turn.rs
src/resources/: map_size.rs  mod.rs
src/states/: app_state.rs  game_phase.rs  mod.rs
