[package]
name = "rust-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking"] }
bevy_egui = "0.38.1"
earcutr = "0.5.0"
rand = "0.9.2"
voronoice = "0.2.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# dynamic Bevy linking command
# cargo add bevy -F dynamic_linking

